src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_all_statuses.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 758
expression: display
---
┌──────────────────────────────────────────────────────────────────────────────┐
│✓ Done ─── ● Active ─── ✗ Failed ─── ⊘ Skipped ─── ○ Pending                  │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
