src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_borderless_drops_title.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 866
expression: display
---
✓ Build ─── ● Test
