src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_borderless_one_row.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 826
expression: display
---
○ Home ─── ● Docs ─── ○ Guide
