src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/step_indicator/tests.rs
expression: display
---
✓ Build ─── ● Test ─── ○ Deploy
