src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_empty.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 773
expression: display
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
