src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_focused_step.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 710
expression: display
---
┌──────────────────────────────────────────────────────────┐
│○ A ─── ○ B ─── ○ C                                       │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
