src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_horizontal.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 652
expression: display
---
┌──────────────────────────────────────────────────────────┐
│✓ Build ─── ● Test ─── ○ Deploy                           │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
