src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_vertical_descriptions.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 736
expression: display
---
┌──────────────────────────────────────┐
│✓ Build                               │
│  Compile sources                     │
││                                     │
│● Test                                │
│  Run unit tests                      │
││                                     │
│○ Deploy                              │
│  Push to production                  │
│                                      │
│                                      │
└──────────────────────────────────────┘
