src/component/step_indicator/snapshots/envision__component__step_indicator__tests__view_with_title.snap
---
source: src/component/step_indicator/tests.rs
assertion_line: 692
expression: display
---
┌ Pipeline ────────────────────────────────────────────────┐
│✓ Build ─── ● Test                                        │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
